# ros2_ws_lab3

exercice1_lab3_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
exercice1_lab3_ws/install/emergency_lab3/lib/emergency_lab3/: emergency_stop
exercice1_lab3_ws/install/emergency_lab3/share/emergency_lab3/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
exercice1_lab3_ws/log/: latest_build  latest_list
exercice1_lab3_ws/src/emergency_lab3/: package.xml  setup.cfg  setup.py
exercice1_lab3_ws/src/emergency_lab3/emergency_lab3/: emergency_stop.py
install/: local_setup.sh  setup.sh
install/custom_interfaces/share/custom_interfaces/: package.sh  package.xml
install/fleet_interfaces/share/fleet_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/fleet_manager/lib/fleet_manager/: fleet_monitor  robot_simulator
install/fleet_manager/share/fleet_manager/: package.dsv  package.ps1  package.sh
install/robot_actions/lib/robot_actions/: battery_charger  battery_charger_preempt  battery_charger_queue  battery_charger_reject  battery_client
install/robot_actions/share/robot_actions/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robotics_sim_project/share/robotics_sim_project/: local_setup.sh  package.sh
install/simple_interfaces/share/simple_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/simple_params/lib/simple_params/: temp_publisher
install/simple_params/share/simple_params/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
src/custom_interfaces/: CMakeLists.txt
src/fleet_interfaces/: CMakeLists.txt
src/fleet_manager/: package.xml  setup.py
src/fleet_manager/config/: fleet_monitor.yaml  scout_robot.yaml  transporter_robot.yaml
src/fleet_manager/fleet_manager/: fleet_monitor.py
src/fleet_manager/launch/: multi_robot_fleet.launch.py
src/robot_actions/: package.xml  setup.py
src/robot_actions/robot_actions/: battery_charger_preempt.py  battery_client.py
src/robotics_sim_project/: CMakeLists.txt
src/robotics_sim_project/launch/: gazebo_simple_arm.launch.py
src/robotics_sim_project/urdf/: simple_arm.urdf
src/robotics_sim_project/worlds/: group_project_world.world
src/simple_interfaces/: CMakeLists.txt  package.xml
src/simple_params/: package.xml  setup.cfg  setup.py
src/simple_params/config/: indoor_sensor.yaml
(+113 files in other folders)
